[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "budget-sim"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "David E. James", email = "david.eugene.james@protonmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/David E. James/budget-sim#readme"
Issues = "https://github.com/David E. James/budget-sim/issues"
Source = "https://github.com/David E. James/budget-sim"

[tool.hatch.version]
path = "src/budget_sim/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/budget_sim tests}"

[tool.coverage.run]
source_pkgs = ["budget_sim", "tests"]
branch = true
parallel = true
omit = [
  "src/budget_sim/__about__.py",
]

[tool.coverage.paths]
budget_sim = ["src/budget_sim", "*/budget-sim/src/budget_sim"]
tests = ["tests", "*/budget-sim/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
